# rust-game

./: .envrc  .gitattributes  .gitignore  Cargo.toml  README.md  flake.nix  run.ps1
.github/workflows/: ci.yaml
assets/: bush.glb  character.glb  default.chunkgen.ron  default.worldgen.ron  tree.glb
assets/images/tiles/: grass.png~
assets/shaders/: billboard.wgsl  grass.wgsl  leaves.wgsl  pixel.wgsl  pixel_funcs.wgsl  terrain.wgsl  water.wgsl
crates/rg_agent/: Cargo.toml
crates/rg_agent/src/: character.rs  lib.rs  movement.rs
crates/rg_ai/: Cargo.toml
crates/rg_ai/src/: actions.rs  behavior_tree.rs  lib.rs
crates/rg_billboard/: Cargo.toml
crates/rg_billboard/src/: instance.rs  lib.rs  material.rs  render.rs  scatter.rs
crates/rg_camera_controller/: Cargo.toml
crates/rg_camera_controller/src/: lib.rs
crates/rg_core/: Cargo.toml
crates/rg_core/src/: array_texture.rs  camera.rs  chunk.rs  deserialized_resource.rs  grid.rs  grid_cache.rs  layers.rs  lib.rs  material.rs  noise.rs  poisson_disc.rs  prev_transform.rs  progress.rs  scale.rs  vec_utils.rs
crates/rg_core/src/billboard/: instance.rs  material.rs  mod.rs  scatter.rs
crates/rg_core/src/grid/: blur.rs  edt.rs  float_grid.rs  mod.rs  ops.rs  serde_blob.rs
crates/rg_core/src/noise/: fbm.rs  mod.rs  simplex.rs
crates/rg_dev_overlay/: Cargo.toml  build.rs
crates/rg_dev_overlay/src/: lib.rs  version_overlay.rs
crates/rg_grid/: Cargo.toml
crates/rg_grid/src/: edt.rs  float_grid.rs  lib.rs  ops.rs  serde_blob.rs
crates/rg_main/: Cargo.toml
crates/rg_main/src/: camera_controller.rs  main.rs  material.rs
crates/rg_navigation/: Cargo.toml
crates/rg_navigation/src/: collider_set.rs  generator.rs  lib.rs  listener.rs  navmesh.rs  observer.rs
crates/rg_navigation_api/: Cargo.toml
crates/rg_navigation_api/src/: lib.rs
crates/rg_noise/: Cargo.toml
crates/rg_noise/src/: lib.rs
crates/rg_pixel_material/: Cargo.toml
crates/rg_pixel_material/src/: lib.rs
crates/rg_terrain/: Cargo.toml
crates/rg_terrain/src/: chunk.rs  chunks.rs  generator.rs  grass.rs  heightmap.rs  lib.rs  map.rs  mesher.rs  navigation.rs  poisson.rs  tiles.rs  utils.rs
crates/rg_terrain/src/grass/: density.rs  generator.rs  material.rs  mod.rs
crates/rg_terrain/src/maps/: generator.rs  mod.rs
crates/rg_terrain/src/scatter/: bush.rs  mod.rs  tree.rs
crates/rg_terrain/src/surface/: heightmap.rs  material.rs  mesh.rs  mod.rs
crates/rg_worldgen/: Cargo.toml
crates/rg_worldgen/src/: biomes.rs  elevation.rs  height.rs  island.rs  island_shaping.rs  lib.rs  noise_maps.rs  progress.rs  rivers.rs  shores.rs  topography.rs
crates/rg_worldgen_api/: Cargo.toml
crates/rg_worldgen_api/src/: lib.rs  progress.rs  settings.rs
