[workspace]
resolver = "2"

members = [
  "crates/rg_agent",
  "crates/rg_ai",
  "crates/rg_billboard",
  "crates/rg_camera_controller",
  "crates/rg_dev_overlay",
  "crates/rg_main",
  # "crates/rg_navigation",
  "crates/rg_pixel_material",
  "crates/rg_terrain",
  "crates/rg_worldgen",
]

[workspace.dependencies]
bevy = { version = "0.11" }
bevy-inspector-egui = "0.19"
bevy_egui = "0.21"
bitflags = "2.3"
bytemuck = "1.13"
delaunator = "1.0"
edt = "0.2"
futures-lite = "1.13"
image = "0.24"
parking_lot = "0.12"
rand = "0.8"
rand_pcg = "0.3"
rayon = "1.7"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
tracing-tracy = { version = "0.10", features = ["ondemand"] }
bevy_xpbd_3d = { git = "https://github.com/LeshaInc/bevy_xpbd.git", branch = "disable-debug-rendering", features = ["debug-plugin"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
