[workspace]
resolver = "2"

members = [
  "crates/rg_agent",
  "crates/rg_ai",
  "crates/rg_core",
  "crates/rg_dev_overlay",
  "crates/rg_main",
  "crates/rg_navigation",
  "crates/rg_navigation_api",
  "crates/rg_terrain",
  "crates/rg_worldgen",
  "crates/rg_worldgen_api",
]

[workspace.dependencies]
anyhow = "1.0"
bevy-inspector-egui = "0.22"
bevy_rapier3d = "0.23"
bitflags = "2.4"
bytemuck = "1.14"
contour = "0.12"
crossbeam-utils = "0.8"
delaunator = "1.0"
egui_plot = "0.24"
futures-lite = "2.1"
parking_lot = "0.12"
rand_pcg = "0.3"
rayon = "1.8"
rmp-serde = "1.1"
ron = "0.8"
smallvec = "1.11"
spade = "2.5"
zstd = "0.13"

[workspace.dependencies.bevy]
version = "0.12"
default-features = false
features = [
  "multi-threaded",
  "bevy_asset",
  "bevy_scene",
  "bevy_winit",
  "bevy_render",
  "bevy_core_pipeline",
  "bevy_gizmos",
  "bevy_sprite",
  "bevy_pbr",
  "bevy_gltf",
  "bevy_text",
  "bevy_ui",
  "animation",
  "file_watcher",
  "tonemapping_luts",

  "png",
  "vorbis",

  "x11",
]

[workspace.dependencies.bevy_egui]
version = "0.24"
default-features = false

[workspace.dependencies.image]
version = "0.24"
default-features = false
features = ["png"]

[workspace.dependencies.rand]
version = "0.8"
default-features = false

[workspace.dependencies.raqote]
version = "0.8"
default-features = false

[workspace.dependencies.serde]
version = "1.0"
features = ["derive"]

[workspace.dependencies.tracing-tracy]
version = "0.10"
features = ["ondemand"]

[workspace.dependencies.vergen]
version = "8.2"
features = ["build", "git", "gitcl"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.production]
inherits = "release"
codegen-units = 1
lto = "thin"
