[package]
name = "rg_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
rg_camera_controller = { path = "../rg_camera_controller" }
rg_core = { path = "../rg_core" }
rg_pixel_material = { path = "../rg_pixel_material" }
rg_terrain = { path = "../rg_terrain" }

bevy = { workspace = true }
bevy_rapier3d = { workspace = true }
