[package]
name = "rg_core"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy_rapier3d = { workspace = true }
bitflags = { workspace = true }
bytemuck = { workspace = true }
edt = { workspace = true }
image = { workspace = true }
num-traits = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
rand_pcg = { workspace = true }
rayon = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
zstd = { workspace = true }
