[package]
name = "rg_core"
version = "0.1.0"
edition = "2021"

[dependencies]
rg_grid = { path = "../rg_grid" }
rg_noise = { path = "../rg_noise" }

bevy = { workspace = true }
bevy_egui = { workspace = true }
bevy_rapier3d = { workspace = true }
bitflags = { workspace = true }
bytemuck = { workspace = true }
crossbeam-utils = { workspace = true }
image = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
rand_pcg = { workspace = true }
rayon = { workspace = true }
rmp-serde = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
zstd = { workspace = true }
