[package]
name = "rg_main"
version = "0.1.0"
edition = "2021"

[dependencies]
rg_billboard = { path = "../rg_billboard" }
rg_pixel_material = { path = "../rg_pixel_material" }
rg_terrain = { path = "../rg_terrain" }
rg_ai = { path = "../rg_ai" }

bevy = { workspace = true }
bevy_rapier3d = { workspace = true }