[package]
name = "rg_main"
version = "0.1.0"
edition = "2021"

[dependencies]
rg_agent = { path = "../rg_agent" }
rg_ai = { path = "../rg_ai" }
rg_billboard = { path = "../rg_billboard" }
rg_dev_overlay = { path = "../rg_dev_overlay" }
rg_navigation = { path = "../rg_navigation" }
rg_pixel_material = { path = "../rg_pixel_material" }
rg_terrain = { path = "../rg_terrain" }

bevy = { workspace = true }
bevy_egui = { workspace = true }
bevy_rapier3d = { workspace = true }
tracing-tracy = { workspace = true }