[package]
name = "rg_main"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[dependencies]
rg_agent = { path = "../rg_agent" }
rg_ai = { path = "../rg_ai" }
rg_core = { path = "../rg_core" }
rg_dev_overlay = { path = "../rg_dev_overlay" }
rg_navigation = { path = "../rg_navigation" }
rg_terrain = { path = "../rg_terrain" }
rg_worldgen = { path = "../rg_worldgen" }
rg_worldgen_api = { path = "../rg_worldgen_api" }

bevy = { workspace = true }
bevy_egui = { workspace = true }
bevy_rapier3d = { workspace = true }
tracing-tracy = { optional = true, workspace = true }

[build-dependencies]
vergen = { workspace = true }

[features]
default = []
dev = ["dep:tracing-tracy", "bevy/dynamic_linking", "bevy/trace_tracy"]
