[package]
name = "rg_navigation"
version = "0.1.0"
edition = "2021"

[dependencies]
rg_core = { path = "../rg_core" }
rg_dev_overlay = { path = "../rg_dev_overlay" }

bevy = { workspace = true }
bevy_rapier3d = { workspace = true }
futures-lite = { workspace = true }
smallvec = { workspace = true }
spade = { workspace = true }
