[package]
name = "rg_terrain"
version = "0.1.0"
edition = "2021"

[dependencies]
rg_core = { path = "../rg_core" }
rg_navigation_api = { path = "../rg_navigation_api" }
rg_worldgen_api = { path = "../rg_worldgen_api" }

bevy = { workspace = true }
bevy_rapier3d = { workspace = true }
futures-lite = { workspace = true }
rand = { workspace = true }
rand_pcg = { workspace = true }
serde = { workspace = true }
