[package]
name = "rg_worldgen"
version = "0.1.0"
edition = "2021"

[dependencies]
rg_core = { path = "../rg_core" }

bevy = { workspace = true }
delaunator = { workspace = true }
edt = { workspace = true }
futures-lite = { workspace = true }
image = { workspace = true }
rand = { workspace = true }
rand_pcg = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
raqote = { workspace = true }

